# one-tap-trading

./: .env.example  .gitignore  .gitmodules  .npmrc  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prek.toml  turbo.json
.config/: wt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  3-epic.yml  4-spike.yml
.github/workflows/: ci.yml
apps/indexer/: Cargo.toml  package.json
apps/indexer/src/: main.rs
apps/indexer/src/handlers/: health.rs
apps/web/: .gitignore  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
apps/web/e2e/: fixtures.ts  global-setup.ts  state.json.example
apps/web/e2e/scripts/: setup.ts
apps/web/e2e/specs/: 01-smoke.spec.ts  02-trading.spec.ts
apps/web/src/: test-setup.ts
apps/web/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/web/src/components/: account-header.tsx  delegate-modal.test.tsx  delegate-modal.tsx  faucet-modal.test.tsx  faucet-modal.tsx  fuel-gauge.test.tsx  fuel-gauge.tsx  game-canvas.tsx  landing-page.tsx  long-short-buttons.test.tsx  long-short-buttons.tsx  positions-panel.tsx  signup-modal.test.tsx  signup-modal.tsx  trade-history.tsx  trading-app.tsx  trading-grid.test.tsx  trading-grid.tsx
docs/: gotchas.md  megaeth-aa-infrastructure.md  phase-2-verification.md
docs/sdd/: README.md
docs/sdd/monorepo-foundation/: design.md  explore.md  proposal.md  spec.md  tasks.md
docs/sdd/session-key-trade-fix/: design.md
scripts/: dev.sh
tools/alto/: README.md  megaeth-carrot.json
(+30 files in other folders)
